WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
75562
REGRESSION (
r84990
): Can't drag WinLauncher by its title bar when Aero is disabled
https://bugs.webkit.org/show_bug.cgi?id=75562
Summary
REGRESSION (r84990): Can't drag WinLauncher by its title bar when Aero is dis...
Adam Roben (:aroben)
Reported
2012-01-04 11:33:12 PST
REGRESSION (
r84990
): Can't drag WinLauncher by its title bar
Attachments
Patch
(1.92 KB, patch)
2012-01-04 11:33 PST
,
Adam Roben (:aroben)
bfulgham
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2012-01-04 11:33:51 PST
Created
attachment 121130
[details]
Patch
Brent Fulgham
Comment 2
2012-01-04 12:38:47 PST
Comment on
attachment 121130
[details]
Patch Rats -- I caused this problem. :-( Looks good to me.
Adam Roben (:aroben)
Comment 3
2012-01-05 06:56:53 PST
Committed
r104154
: <
http://trac.webkit.org/changeset/104154
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug