Make WinLauncher's window frame respond to clicks/drags again

Fixes <http://webkit.org/b/75562> REGRESSION (r84990): Can't drag WinLauncher by its title
bar when Aero is disabled

Reviewed by Brent Fulgham.

* WinLauncher/WinLauncher.cpp:
(WndProc): Always call up to our parent wndproc when we don't handle WM_NCHITTEST ourselves.
Also removed an unnecessary "break" keyword.

Canonical link: https://commits.webkit.org/92400@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104154 268f45cc-cd09-0410-ab3c-d52691b4dbfc